--- a/src/main/resources/templates/usr/member/me.html
+++ b/src/main/resources/templates/usr/member/me.html
@@ -29,7 +29,7 @@
                         </div>
                         <div class="flex flex-col items-center">
                             <span class="font-bold">포인트</span>
-                            <span class="font-bold">100</span>
+                            <span class="font-bold" th:text="${@rq.member.point.currentPoint}"></span>
                         </div>
                     </div>
                 </article>
