Design: devChall example.img add

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -74,7 +74,7 @@
                         class="card w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
                     <a th:href="|/usr/challenge/detail/${challengeMember.linkedChallenge.id}|">
                         <figure class="pt-5">
-                            <img src="/images/Challenge-img.png" alt="Shoes" class="rounded-xl w-[90%]" />
+                            <img src="/images/example1.png" alt="Shoes" class="rounded-xl w-[90%]" />
                         </figure>
                     </a>
                     <div class="card-body items-center text-center" style="padding: 10px">
@@ -123,7 +123,7 @@
                             <div class="card w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
                                 <a th:href="|/usr/challenge/detail/${challenge.id}|">
                                     <figure class="pt-5">
-                                        <img src="/images/Challenge-img.png" alt="Shoes" class="rounded-xl w-[90%]" />
+                                        <img src="/images/example1.png" alt="Shoes" class="rounded-xl w-[90%]" />
                                     </figure>
                                 </a>
 
