--- a/src/main/resources/templates/usr/member/store.html
+++ b/src/main/resources/templates/usr/member/store.html
@@ -7,6 +7,20 @@
 <body>
 
 <main layout:fragment="main" body class="bg-[#121212] w-full flex-col flex">
+
+    <script>
+        function showBuy(buyCode) {
+            if (confirm('정말로 구매하시겠습니까?')) {
+                alert(buyCode + "아이템을 구매합니다!");
+                <!-- 구매 관련 메서드 들어갈 자리-->
+                location.href = "/usr/member/store/buy/" + buyCode;
+            } else {
+                alert("구매가 취소되었습니다");
+            }
+        }
+    </script>
+
+
     <div class="gap-75px flex">
         <div id="inven" class="bg-black col-span-1 md:col-span-3 xl:col-span-3"
              style="border-top-left-radius: 8rem; height: 92.3rem; left: 0; top: 7rem; width: calc(100% / 3);">
@@ -26,14 +40,15 @@
             <div class="flex justify-center items-center">
                 <div class="flex justify-center bg-[#03fa6e] rounded-[1.5rem] flex-shrink-0 h-[4rem] mx-[18rem] mt-20"
                      style="width: 200px;">
-                    <span class="mt-4 text-[#000000] font-bold text-xl">유저 닉네임</span>
+                    <a class="mt-4 text-[#000000] font-bold text-xl" th:text="${memberNickname}"></a>
                 </div>
             </div>
+
 
             <div class="flex justify-center items-center">
                 <div class="flex justify-center bg-[#000000] rounded-[4.3444rem] flex-shrink-0 h-[4rem] mx-[18rem] w-[calc(100% - 30rem)] mt-20 border border-[#03fa6e]"
                      style="width: 200px;">
-                    <span class="mt-4 text-[#03fa6e] font-bold text-xl">1,000 Point</span>
+                    <a class="mt-4 text-[#03fa6e] font-bold text-xl" th:text="${memberPoint + ' point'}">point</a>
                 </div>
             </div>
 
@@ -59,53 +74,53 @@
                         <span class="mt-4 text-[#000000] font-bold text-xl">Font Color</span>
                     </div>
 
-                    <div class="card p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
-                        <div class="mx-10 mt-5 justify-center" style="display: flex; justify-content: center; align-items: center; width: 100px; height: 100px; background-color: #FCE411;"></div>
-                        <div class="flex flex-col justify-end items-end mt-7 space-y-6">
+                    <div class="card justify-end items-end p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
+                        <!--색상 아이템 추가-->
+                        <div class="mx-3 mt-5" style="display: flex; justify-content: center; align-items: center; width: 100px; height: 100px; background-color: #FCE411;"></div>
+                        <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy("L-F-FCE411")>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
                     </div>
-
-                    <div class="card p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
-                        <div class="mx-10 mt-5 justify-center" style="display: flex; justify-content: center; align-items: center; width: 100px; height: 100px; background-color: #ED3096;"></div>
-                        <div class="flex flex-col justify-end items-end mt-7 space-y-6">
+                    <div class="card justify-end items-end p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
+                        <!--색상 아이템 추가-->
+                        <div class="mx-3 mt-5" style="display: flex; justify-content: center; align-items: center; width: 100px; height: 100px; background-color: #ED3096;"></div>
+                        <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
                     </div>
-
-                    <div class="card p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
-                        <div class="mx-10 mt-5 justify-center" style="display: flex; justify-content: center; align-items: center; width: 100px; height: 100px; background-color: #1144FC;"></div>
-                        <div class="flex flex-col justify-end items-end mt-7 space-y-6">
+                    <div class="card justify-end items-end p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
+                        <!--색상 아이템 추가-->
+                        <div class="mx-3 mt-5" style="display: flex; justify-content: center; align-items: center; width: 100px; height: 100px; background-color: #1144FC;"></div>
+                        <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
                     </div>
-
-                    <div class="card p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
-                        <div class="mx-10 mt-5 justify-center" style="display: flex; justify-content: center; align-items: center; width: 100px; height: 100px; background-color: #FF9900;"></div>
-                        <div class="flex flex-col justify-end items-end mt-7 space-y-6">
+                    <div class="card justify-end items-end p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
+                        <!--색상 아이템 추가-->
+                        <div class="mx-3 mt-5" style="display: flex; justify-content: center; align-items: center; width: 100px; height: 100px; background-color: #FF9900;"></div>
+                        <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
                     </div>
-
-                    <div class="card p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
-                        <div class="mx-10 mt-5 justify-center" style="display: flex; justify-content: center; align-items: center; width: 100px; height: 100px; background-color: #3CB24F;"></div>
-                        <div class="flex flex-col justify-end items-end mt-7 space-y-6">
-                            <a class="mt-3 mx-5" style="color:#3CB24F">User1</a>
-                            <span class="badge badge-custom mx-1" style="font-size: small; background-color: black; color: #03fa6e; border: 2px solid #03fa6e; border-radius: 6px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 75px; height: 50px; padding: 10px; background-color: black; color: #03fa6e;">
-                                <span style="display: block; line-height: 0px; font-size: 3px;">BUY</span>
+                    <div class="card justify-end items-end p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
+                        <!--색상 아이템 추가-->
+                        <div class="mx-3 mt-5" style="display: flex; justify-content: center; align-items: center; width: 100px; height: 100px; background-color: #3CB24F;"></div>
+                        <div class="flex flex-col justify-end items-start mt-7 space-y-6">
+                            <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
+                                <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
                     </div>
@@ -129,7 +144,7 @@
                         </a>
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
@@ -142,7 +157,7 @@
                         </a>
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
@@ -155,7 +170,7 @@
                         </a>
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
@@ -168,7 +183,7 @@
                         </a>
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
@@ -181,7 +196,7 @@
                         </a>
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
@@ -198,7 +213,7 @@
                     <div class="card justify-end items-end p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
@@ -206,7 +221,7 @@
                     <div class="card justify-end items-end p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
@@ -214,7 +229,7 @@
                     <div class="card justify-end items-end p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
@@ -222,7 +237,7 @@
                     <div class="card justify-end items-end p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
@@ -230,7 +245,7 @@
                     <div class="card justify-end items-end p-2 w-3/4 h-3/5 bg-white bg-opacity-80 mt-7">
                         <div class="flex flex-col justify-end items-start mt-7 space-y-6">
                             <span class="badge badge-custom mx-1" style="font-size: x-small; background-color: black; color: #03fa6e; border: 1px solid #03fa6e; border-radius: 4px;">300P</span>
-                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;">
+                            <div class="btn btn-sm btn-black" style="width: 50px; padding: 0px; background-color: black; color: #03fa6e;" onclick=showBuy()>
                                 <span style="display: block; line-height: 0px; font-size: 1px;">BUY</span>
                             </div>
                         </div>
