Design: 디자인 수정

--- a/src/main/resources/templates/usr/challenge/create_form.html
+++ b/src/main/resources/templates/usr/challenge/create_form.html
@@ -10,10 +10,7 @@
 <main layout:fragment="main" class="flex flex-col w-full">
 
     <!-- FIXME 챌린지별 사진으로 변경?-->
-    <div>
-        <h1>Layout 네비게이션 바 들어갈 자리</h1>
-    </div>
-    <div class="flex flex-1">
+    <div class="flex flex-1 justify-center items-center">
         <form method="post" th:action="@{/usr/challenge/create}" class="flex flex-col justify-center items-center w-full">
             <div class="card bg-white">
                 <div class="w-full p-10 lg:w-[65rem]">
