Feat: 이미지 업로드 구현 완료

--- a/src/main/resources/templates/usr/challenge/create_form.html
+++ b/src/main/resources/templates/usr/challenge/create_form.html
@@ -11,7 +11,7 @@
 
     <!-- FIXME 챌린지별 사진으로 변경?-->
     <div class="flex flex-1 justify-center items-center">
-        <form method="post" th:action="@{/usr/challenge/create}" class="flex flex-col justify-center items-center w-full">
+        <form method="post" th:action="@{/usr/challenge/create}" enctype="multipart/form-data" class="flex flex-col justify-center items-center w-full">
             <div class="card bg-white">
                 <div class="w-full p-10 lg:w-[65rem]">
                     <p class="text-[25px] bolder">챌린지 생성</p>
@@ -126,7 +126,7 @@
                                     <label for="img" class="label">
                                         <span class="text-gray-400">챌린지 대표 이미지</span>
                                     </label>
-                                    <input id="img" name="img" type="file" class="file-input file-input-bordered file-input-accent w-full max-w-xs" />
+                                    <input id="img" name="file" type="file" class="file-input file-input-bordered file-input-accent w-full max-w-xs" />
                                 </div>
                             </div>
 
