--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -23,7 +23,7 @@
     </script>
 
     <div class="flex">
-            <img src="/images/example1.png" alt="post_image" class="w-full h-[200px]"/>
+        <img th:src="${challenge.challengeImg}" alt="challenge_image"/>
     </div>
 
     <div class="divider"></div>
