--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,8 @@
     <!--  헤더 시작  -->
     <header class="flex w-full justify-between">
         <section class="flex">
-            <img src="/images/logoXL.png" alt="DevChall" class="w-[200px] h-[200px] flex-shrink-0 mx-10 p-2">
+<!--            <img src="/images/logoXL.png" alt="DevChall" class="w-[200px] h-[200px] flex-shrink-0 mx-10 p-2">-->
+            <img src="https://kr.object.ncloudstorage.com/devchall/test/7d58d53f-4160-42b8-9f24-0571b1218c5f.png" alt="challenge"></img>
         </section>
         <!--   카테고리 타임리프 작업 필요    -->
         <section class="flex w-[90%]">
